--- a/FinanceWebApi-master/appsettings.json
+++ b/FinanceWebApi-master/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=FinanceManagementSystem;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
