--- a/FinanceWebApi-master/Finance_Api.csproj
+++ b/FinanceWebApi-master/Finance_Api.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>C:\ProjectSource\FMS\FinanceWebApi-master\bin\FMS_DOC\FMS.doc.txt</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
